<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    

    <TextView
    android:id="@+id/TextViewTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/create_event"
    android:textSize="10pt">
	</TextView>
    
    <EditText
        android:id="@+id/event_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title"
        android:inputType="text" >

	</EditText>
    
    <EditText
        android:id="@+id/event_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_desc"
        android:inputType="textMultiLine" 
        android:lines="3"  
        >

	</EditText>
    
    <EditText
        android:id="@+id/event_loc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_loc"
        android:inputType="text" >
	</EditText>

    <EditText
        android:id="@+id/event_max_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/event_max_people"
        android:inputType="number" />

    <Spinner
        android:id="@+id/events_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    	
    <Button
	    android:id="@+id/event_date_button"
	    android:layout_height="wrap_content"
	    android:text="@string/button_event_date"
	    android:onClick="showDatePickerDialog"
	    android:layout_width="fill_parent">
	</Button>
	
    <Button
	    android:id="@+id/event_time_button"
	    android:layout_height="wrap_content"
	    android:text="@string/button_event_time"
	    android:onClick="showTimePickerDialog"
	    android:layout_width="fill_parent">
	</Button>
    
    <Button
	    android:id="@+id/event_add_button"
	    android:layout_height="wrap_content"
	    android:text="@string/button_create"
	    android:onClick="sendFeedback"
	    android:layout_width="fill_parent">
	</Button>
    
    
</LinearLayout>

